2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, data/images/gravatar.png: Added gravatar.png

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/PreferencesDialog.cs: polished the preferences
	* src/Application.cs: fixed hiding prefs dialog
	* src/Makefile.am: Added gravatar image to exe
	* giver.mdp: removed glade
	* configure.ac, data/glade, data/glade/giver-prefs.glade,
	  data/glade/Makefile.am, data/glade/gravatar.gif: removed glade
	  (sorry Scott)
	* data/images/Makefile.am, data/Makefile.am: Added gravatar image

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs, src/SendingHandler.cs, src/RequestHandler.cs,
	  src/Protocol.cs, src/TargetService.cs: Added TomBoy Hack
	* data/glade/giver-prefs.glade: Fixed up spacing

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs: Added new prompts
	* src/Application.cs: Added About dialog

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped version
	* NEWS: updated for release

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TargetWindow.cs: changed window name
	* src/TargetService.cs: renamed menu item

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: Removed local computers from view

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TargetWindow.cs: debug
	* src/SendingHandler.cs: multiple files and folders
	* src/RequestHandler.cs: Multiple files and folders
	* src/UriList.cs: new class for drag and drop
	* src/GiverService.cs: Debug
	* src/Protocol.cs: Support for multiple files and folders
	* src/Application.cs, src/Makefile.am, src/TargetService.cs, giver.mdp:
	  Updated drag and drop support

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TargetWindow.cs, src/Application.cs, src/TargetService.cs:
	  Updated to save window and hide it

2007-06-28  Scott Reeves <sreeves@novell.com> 
