@@ -45,7 +45,6 @@ ASSEMBLIES =  \
 	-r:System.Xml \
 	$(GLIB_SHARP_20_LIBS) \
 	$(GNOME_SHARP_20_LIBS) \
-	$(GLADE_SHARP_20_LIBS) \
 	$(GTK_DOTNET_20_LIBS) \
 	$(NOTIFY_SHARP_LIBS) \
 	$(AVAHI_SHARP_LIBS) 
