@@ -1,5 +1,9 @@
 2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* src/ServiceLocator.cs, src/Application.cs, src/Makefile.am: debug
+
+2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* configure.ac, data/images/gravatar.png: Added gravatar.png
 
 2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 
